--- a/poker-after-dark-web/src/app/players/players.component.html
+++ b/poker-after-dark-web/src/app/players/players.component.html
@@ -2,6 +2,7 @@
   <div class="card card-default">
     <!-- Default card contents -->
     <div class="card-header"><span class="lead">Players</span>
+      <button mat-raised-button color="primary" class="floatRight" *ngIf="administrationMode" (click)="onAddPlayer()">Add player</button>
     </div>
     <div class="card-body">
       <mat-form-field class="filter">
