--- a/poker-after-dark-web/src/app/shared/components/winnings-chart/winnings-chart.component.html
+++ b/poker-after-dark-web/src/app/shared/components/winnings-chart/winnings-chart.component.html
@@ -13,7 +13,7 @@
       
     </div>
     <div class="card-body">
-      <div id="chartContainer" style="height: 500px; width: 100%; margin-left:auto;margin-right:auto;"></div>
+      <chart-app playerIds='playerIds' from='from' to='to' ></chart-app>
     </div>
   </div>
 
