--- a/poker-after-dark-web/src/app/modules/game/components/games/games.component.html
+++ b/poker-after-dark-web/src/app/modules/game/components/games/games.component.html
@@ -35,18 +35,18 @@
           </ng-container>
           <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
           <mat-row *matRowDef="let row; columns: displayedColumns;" matRipple class="element-row" [cdkDetailRow]="row"
-            [cdkDetailRowTpl]="tpl"></mat-row>
+            [cdkDetailRowTemplate]="gameDetailsTemplate"></mat-row>
         </mat-table>
       </div>
 
 
-      <ng-template #tpl let-element>
+      <ng-template #gameDetailsTemplate let-element>
         <div class="mat-row detail-row" [@detailExpand] style="overflow: hidden">
-           <div class="row" *ngFor="let participant of element.participants">
-            <div class="col-md-3">
+           <div class="row" style="margin-left: 30px;" *ngFor="let participant of element.participants">
+            <div class="col-md-2">
               {{ getPlayerName(participant.playerId) }}
             </div>
-            <div class="col-md-2">
+            <div class="col-md-1">
               {{ participant.earnings }}
             </div>
           </div>
