--- a/poker-after-dark-web/src/app/modules/winnings-chart/components/winnings-chart.component.html
+++ b/poker-after-dark-web/src/app/modules/winnings-chart/components/winnings-chart.component.html
@@ -13,7 +13,7 @@
       
     </div>
     <div class="card-body">
-      <chart-app playerIds='playerIds' from='from' to='to' ></chart-app>
+      <app-chart [title]="title" [playerIds]="playerIds" [from]="from" [to]="to" ></app-chart>
     </div>
   </div>
 
