--- a/poker-after-dark-web/src/app/core/home/home.component.html
+++ b/poker-after-dark-web/src/app/core/home/home.component.html
@@ -4,7 +4,7 @@
     <div class="card-header"><span class="lead">Poker after dark</span></div>
     <div class="card-body">
       <div style="display: flex; justify-content: center;">
-        <img src="https://upload.wikimedia.org/wikipedia/en/7/7b/Poker_After_Dark_logo.jpg">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/5/5a/Poker_After_Dark_show_logo.png">
        </div>
     </div>
   </div>
