game list: minor fixes

--- a/poker-after-dark-web/src/app/modules/game/components/poker-table/poker-table.component.css
+++ b/poker-after-dark-web/src/app/modules/game/components/poker-table/poker-table.component.css
@@ -3,7 +3,7 @@
 }
 
 .poker-table {
-    background-image: url('/assets/table.png');
+    background-image: url('/pokerafterdark/assets/table.png'), url('/assets/table.png');
     background-repeat: no-repeat;
     background-position: center; 
 }
